--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@ Description: Custom child theme for Divi, created by Halt Agency.
 Author: Halt Agency
 Author URI: https://halt.agency/
 Template: Divi
-Version: 1.0.0
+Version: 1.0.1
+GitHub Theme URI: https://github.com/Halt-Agency/OA
+Primary Branch: main
 */
 
 /* =Theme customization starts here
